--- a/views/blog.html
+++ b/views/blog.html
@@ -45,6 +45,7 @@
         </div>
     </nav>
     <section class="container-fluid">
+        <h3>Mi Blog</h3>
         <div class="section__videoFrame--centrado">
             <h5>
                 Dra.Adriana Smajic
