--- a/views/blog.html
+++ b/views/blog.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Blog con informacion relacionados a la obtencion de la ciudadania Croata">
     <meta name="keywords" content="Croacia, Croata, partida de nacimiento, turno embajada, ciudadania europea">
     <title>Mi proyecto-Blog</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
 <body>
@@ -20,16 +20,16 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home</a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/views/blog.html">Blog <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="blog.html">Blog <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/views/nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="../views/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/views/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../views/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
