--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -8,13 +8,13 @@
     <meta name="description" content="Informacion sobre Sebastian Cerda, creador de la paguina web">
     <meta name="keywords" content="Croacia, Croata, partida de nacimiento, turno embajada, ciudadania europea">
     <title>Mi proyecto-Nosotros</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="../../Coder/css/estilo.css">
 </head>
 <!--Inicio de Body-->
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid fixed-top">
-        <a class="navbar-brand" href="/index.html"><img class="logo" alt="Logo" src="/assets/logo.png"></a>
+        <a class="navbar-brand" href="../../Coder/index.html"><img class="logo" alt="Logo" src="../../Coder/assets/logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,16 +22,16 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home</a>
+                    <a class="nav-link" href="../../Coder//index.html">Home</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/views/blog.html">Blog</a>
+                    <a class="nav-link" href="../../Coder/views/blog.html">Blog</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/views/nosotros.html">Nosotros <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../../Coder/views/nosotros.html">Nosotros <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/views/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../../Coder/views/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -39,8 +39,8 @@
                         Servicios
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/views/servicios.html#croataTable">Obtener Turno</a>
-                        <a class="dropdown-item" href="/views/servicios.html#nacimientoTable">Buscar Partidas</a>
+                        <a class="dropdown-item" href="../../Coder/views/servicios.html#croataTable">Obtener Turno</a>
+                        <a class="dropdown-item" href="../../Coder/views/servicios.html#nacimientoTable">Buscar Partidas</a>
                     </div>
                 </li>
             </ul>
@@ -52,7 +52,7 @@
             <!--incio de contenedor para presentacion-->
             <div class="autor">
                 <!--imagen del autor-->
-                <img class="foto-autor rounded mx-auto d-block" src="../assets/seba.jpg" alt="Sebastian Cerda"
+                <img class="foto-autor rounded mx-auto d-block" src="../../Coder/assets/seba.jpg" alt="Sebastian Cerda"
                     width="150" height="150">
                 <!--contenedor descripcion del autor-->
                 <div class="descripcion-autor">
