--- a/views/servicios.html
+++ b/views/servicios.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Servicios ofrecidos relacionados a la obtencion de la ciudadania Croata">
     <meta name="keywords" content="Croacia, Croata, partida de nacimiento, turno embajada, ciudadania europea">
     <title>Mi proyecto-Servicios</title>
-    <link rel="stylesheet" href="/css/estilo.css">
+    <link rel="stylesheet" href="../../Coder/css/estilo.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid fixed-top">
-        <a class="navbar-brand" href="/index.html"><img class="logo" alt="Logo" src="/assets/logo.png"></a>
+        <a class="navbar-brand" href="../../Coder/index.html"><img class="logo" alt="Logo" src="../../Coder/assets/logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,16 +20,16 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home</a>
+                    <a class="nav-link" href="../../Coder/index.html">Home</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/views/blog.html">Blog</a>
+                    <a class="nav-link" href="../../Coder/views/blog.html">Blog</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/views/nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="../../Coder/views/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/views/contacto.html">Contacto</a>
+                    <a class="nav-link" href="../../Coder/views/contacto.html">Contacto</a>
                 </li>
                 <li class="nav-item active dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -37,8 +37,8 @@
                         Servicios<span class="sr-only">(current)</span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/views/servicios.html#croataTable">Obtener Turno</a>
-                        <a class="dropdown-item" href="/views/servicios.html#nacimientoTable">Buscar
+                        <a class="dropdown-item" href="../../Coder/views/servicios.html#croataTable">Obtener Turno</a>
+                        <a class="dropdown-item" href="../../Coder/views/servicios.html#nacimientoTable">Buscar
                             Partidas</a>
                     </div>
                 </li>
