fix github pages issue

--- a/views/contacto.html
+++ b/views/contacto.html
@@ -12,7 +12,8 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid fixed-top">
-        <a class="navbar-brand" href="../../Coder/index.html"><img class="logo" alt="Logo" src="../../Coder/assets/logo.png"></a>
+        <a class="navbar-brand" href="../../Coder/index.html"><img class="logo" alt="Logo"
+                src="../../Coder/assets/logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,7 +30,8 @@
                     <a class="nav-link" href="../../Coder/views/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="../../Coder/views/contacto.html">Contacto <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="../../Coder/views/contacto.html">Contacto <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -37,8 +39,10 @@
                         Servicios
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item dark" href="../../Coder/views/servicios.html#croataTable">Obtener Turno</a>
-                        <a class="dropdown-item" href="../../Coder/views/servicios.html#nacimientoTable">Buscar Partidas</a>
+                        <a class="dropdown-item dark" href="../../Coder/views/servicios.html#croataTable">Obtener
+                            Turno</a>
+                        <a class="dropdown-item" href="../../Coder/views/servicios.html#nacimientoTable">Buscar
+                            Partidas</a>
                     </div>
                 </li>
             </ul>
