--- a/css/estilo.css
+++ b/css/estilo.css
@@ -162,7 +162,8 @@ figure {
 
 img {
   vertical-align: middle;
-  border-style: none; }
+  border-style: none;
+  object-fit: cover; }
 
 svg {
   overflow: hidden;
