--- a/scss/_miEstilo.scss
+++ b/scss/_miEstilo.scss
@@ -162,7 +162,7 @@ textarea {
 }
 
 
-/*blog 
+*/
 .videoFrame {
   text-align: center;
   display: flex;
@@ -174,7 +174,7 @@ textarea {
 iframe {
   width: auto;
 }
-
+/*
 article {
   text-align: center;
 }
