--- a/views/blog.html
+++ b/views/blog.html
@@ -54,7 +54,7 @@
             </h5>
             <p>Este video contiene informacion relevante para el proceso de obtencion de la ciudadania croata</p>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/jDvcoE-T0nI"
+            <iframe width="auto" height="auto" src="https://www.youtube.com/embed/jDvcoE-T0nI"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
