cambiando estilo de las tablas

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7373,38 +7373,10 @@ section {
 .section__videoFrame--centrado {
   text-align: center; }
 
-/*tabla de turno croata*/
-#croataTable {
+table {
   margin-top: 1rem;
   margin-left: 2rem;
-  padding: 3rem;
-  border-right: solid 0.5rem grey;
-  border-bottom: solid 0.5rem grey;
-  border-radius: 50%;
-  transition: transform .2s; }
-
-#croataTable:hover {
-  border-left: solid 0.5rem grey;
-  border-top: solid 0.5rem grey;
-  border-right: none;
-  border-bottom: none;
-  border-radius: 50%; }
-
-/*tabla de partidas*/
-#nacimientoTable {
-  margin-top: 1rem;
-  margin-right: 2rem;
-  padding: 3rem;
-  border-left: solid 0.5rem grey;
-  border-bottom: solid 0.5rem grey;
-  border-radius: 50%; }
-
-#nacimientoTable:hover {
-  border-left: none;
-  border-top: solid 0.5rem grey;
-  border-right: solid 0.5rem grey;
-  border-bottom: none;
-  border-radius: 50%; }
+  padding: 3rem; }
 
 /*headers de tablas */
 th {
