--- a/scss/_miEstilo.scss
+++ b/scss/_miEstilo.scss
@@ -17,7 +17,7 @@ footer{width: 100%; height:4rem; text-align:right; position: sticky; background-
 section{padding-top: 5rem; padding-bottom: 3rem;}
 .footer__social-icons--size{width: 2.5rem; transition: transform .2s;}
 .footer__social-icons--size:hover{transform: scale(1.5)}
-.footer__social-icons--padding{padding-right: .5rem;padding-left: .5rem;padding-top: .5rem;}
+.footer--padding{padding-right: .5rem;padding-left: .5rem;padding-top: .5rem;}
 .noticia__titulo--tamanio{font-size: 1.5rem;}
 .noticia__titulo--color{color: black}
 .noticia__texto--tamanio{font-size: 1.25rem;}
