--- a/views/contacto.html
+++ b/views/contacto.html
@@ -98,19 +98,19 @@
         </form>
     </section>
     <footer class="container-fluid fixed-bottom">
-        <div class="float-left">
+        <div class="float-left footer--padding">
             © Diseñado y Desarrollado | Sebastian Cerda
         </div>
         <div class="float-right">
-            <img class="footer__social-icons--size footer__social-icons--padding"
+            <img class="footer__social-icons--size footer--padding"
                 src="https://cdn3.iconfinder.com/data/icons/2018-social-media-logotypes/1000/2018_social_media_popular_app_logo_instagram-128.png"
                 alt="instagram">
-            <img class="footer__social-icons--size footer__social-icons--padding"
+            <img class="footer__social-icons--size footer--padding"
                 src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Messenger_colored_svg-128.png"
                 alt="messanger">
-            <img class="footer__social-icons--size footer__social-icons--padding"
+            <img class="footer__social-icons--size footer--padding"
                 src="https://cdn4.iconfinder.com/data/icons/miu-flat-social/60/whatsapp-128.png" alt="whatsapp ">
-            <img class="footer__social-icons--size footer__social-icons--padding"
+            <img class="footer__social-icons--size footer--padding"
                 src="https://cdn0.iconfinder.com/data/icons/social-media-2092/100/social-56-128.png" alt="telegram">
         </div>
     </footer>
