--- a/views/contacto.html
+++ b/views/contacto.html
@@ -49,53 +49,22 @@
         </div>
     </nav>
     <section class="container-fluid">
-        <form action="#">
-            <div class="form-group">
-                <label for="nombre">Nombre:<input type="text" class="form-control" placeholder="First name"
-                        name="nombre"></label>
+        <div class="container">
+            <div class="map">
+                <img src="../../Coder/assets/flecha.png" alt="pasiaje">
             </div>
-            <div class="form-group">
-                <label for="apellido">Apellido:<input type="text" class="form-control" placeholder="Last name"
-                        name="apellido"></label>
+            <div class="contact-form">
+                <h1 class="title">Contactenos</h1>
+                <h2 class="subtitle">Estamos para asistirle</h2>
+                <form action="">
+                    <input type="text" name="name" placeholder="Su nombre" />
+                    <input type="email" name="e-mail" placeholder="Su direccion de email" />
+                    <input type="tel" name="phone" placeholder="Su celular"/>
+                    <textarea name="text" id="" rows="8" placeholder="Su consulta"></textarea>
+                    <button class="btn-send">Enviar</button>
+                </form>
             </div>
-            <div class="form-group">
-                <label for="edad">Edad:<input type="number" class="form-control" placeholder="31" name="edad"></label>
-            </div>
-            <label for="genero">Genero:
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="genero" id="masculino" value="masculino"
-                        name="genero">
-                    <label class="form-check-label" for="masculino">
-                        Masculino
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="genero" id="femenino" value="femenino"
-                        name="genero">
-                    <label class="form-check-label" for="femenino">
-                        Femenino
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="genero" id="prefiereNoDecir"
-                        value="prefiereNoDecir" name="genero">
-                    <label class="form-check-label" for="prefiereNoDecir">
-                        Prefiero no decir
-                    </label>
-                </div>
-                <div class="form-group">
-                    <label for="comentario">Comentarios</label>
-                    <textarea class="form-control" id="comentario" cols="60" rows="10"
-                        placeholder="Comentario"></textarea>
-                </div>
-                <label for="custom-select">Desea ser contactado?</label>
-                <select class="custom-select">
-                    <option value="1">Si</option>
-                    <option value="2">No</option>
-                </select>
-                <button type="submit" class="btn boton--enviar">Enviar</button>
-                <button type="reset" class="btn boton--borrar">Borrar</button>
-        </form>
+        </div>
     </section>
     <footer class="container-fluid fixed-bottom">
         <div class="float-left footer--padding">
