--- a/views/contacto.html
+++ b/views/contacto.html
@@ -49,22 +49,23 @@
         </div>
     </nav>
     <section class="container-fluid">
-                <div class="map">
-                    <iframe
-                        src="https://maps.google.com/maps?q=Gorostiaga%202104&t=&z=15&ie=UTF8&iwloc=&output=embed"
-                        width="100%" height="650px" frameborder="0" style="border:0" allowfullscreen></iframe>
-                </div>
-                <div class="contact-form">
-                    <h1 class="title">Contactenos</h1>
-                    <h2 class="subtitle">Estamos para asistirle</h2>
-                    <form action="">
-                        <input type="text" name="name" placeholder="Su nombre" />
-                        <input type="email" name="e-mail" placeholder="Su direccion de email" />
-                        <input type="tel" name="phone" placeholder="Su celular" />
-                        <textarea name="text" id="" rows="8" placeholder="Su consulta"></textarea>
-                        <button class="btn-send">Enviar</button>
-                    </form>
-                </div>
+        <div class="container">
+            <div class="map">
+                <iframe src="https://maps.google.com/maps?q=Gorostiaga%202104&t=&z=15&ie=UTF8&iwloc=&output=embed"
+                    width="100%" height="650px" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+            <div class="contact-form">
+                <h1 class="title">Contactenos</h1>
+                <h2 class="subtitle">Estamos para asistirle</h2>
+                <form action="">
+                    <input type="text" name="name" placeholder="Su nombre" />
+                    <input type="email" name="e-mail" placeholder="Su direccion de email" />
+                    <input type="tel" name="phone" placeholder="Su celular" />
+                    <textarea name="text" id="" rows="8" placeholder="Su consulta"></textarea>
+                    <button class="btn-send">Enviar</button>
+                </form>
+            </div>
+        </div>
     </section>
     <footer class="container-fluid fixed-bottom">
         <div class="float-left footer--padding">
