--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7416,19 +7416,19 @@ nav ul li a:hover {
 
 .container {
   background: #FFFFFF;
-  width: 900px;
+  width: 100%;
   height: 650px;
-  margin: 5% auto;
   position: relative; }
 
 .container .map {
-  width: 45%;
-  float: left; }
+  width: auto;
+  float: left;
+  margin: 2%; }
 
 .container .contact-form {
-  width: 53%;
-  margin-left: 2%;
-  float: left; }
+  width: 50%;
+  float: left;
+  margin: 2%; }
 
 .container .contact-form .title {
   font-size: 2.5em;
@@ -7455,10 +7455,10 @@ nav ul li a:hover {
   color: #242424; }
 
 .container .contact-form .btn-send {
-  background: #A383C9;
+  background: #212529;
   width: 180px;
   height: 60px;
-  color: #FFFFFF;
+  color: #fff;
   font-weight: 700;
   margin: 2% 8%;
   border: none; }
