--- a/scss/_miEstilo.scss
+++ b/scss/_miEstilo.scss
@@ -135,21 +135,21 @@ nav ul li a:hover {
 
 .container {
   background: #FFFFFF;
-  width: 900px;
+  width: 100%;
   height: 650px;
-  margin: 5% auto;
   position: relative;
 }
 
 .container .map {
-  width: 45%;
+  width: auto;
   float: left;
+  margin: 2%;
 }
 
 .container .contact-form {
-  width: 53%;
-  margin-left: 2%;
+  width: 50%;
   float: left;
+  margin: 2%;
 }
 
 .container .contact-form .title {
@@ -181,10 +181,10 @@ nav ul li a:hover {
 }
 
 .container .contact-form .btn-send {
-  background: #A383C9;
+  background: #212529;
   width: 180px;
   height: 60px;
-  color: #FFFFFF;
+  color: #fff;
   font-weight: 700;
   margin: 2% 8%;
   border: none;
