--- a/scss/_miEstilo.scss
+++ b/scss/_miEstilo.scss
@@ -136,7 +136,7 @@ nav ul li a:hover {
 .container {
   background: #FFFFFF;
   width: 100%;
-  height: 650px;
+  height: 750px;
   position: relative;
 }
 
@@ -181,7 +181,7 @@ nav ul li a:hover {
 }
 
 .container .contact-form .btn-send {
-  background: #212529;
+  background: #343a40;
   width: 180px;
   height: 60px;
   color: #fff;
