--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7417,7 +7417,7 @@ nav ul li a:hover {
 .container {
   background: #FFFFFF;
   width: 100%;
-  height: 650px;
+  height: 750px;
   position: relative; }
 
 .container .map {
@@ -7455,7 +7455,7 @@ nav ul li a:hover {
   color: #242424; }
 
 .container .contact-form .btn-send {
-  background: #212529;
+  background: #343a40;
   width: 180px;
   height: 60px;
   color: #fff;
