--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7417,7 +7417,7 @@ nav ul li a:hover {
 .container {
   background: #FFFFFF;
   width: 100%;
-  height: 750px;
+  height: 780px;
   position: relative; }
 
 .container .map {
@@ -7428,7 +7428,8 @@ nav ul li a:hover {
 .container .contact-form {
   width: 50%;
   float: left;
-  margin: 2%; }
+  margin: 2%;
+  margin-top: 0%; }
 
 .container .contact-form .title {
   font-size: 2.5em;
@@ -7594,8 +7595,8 @@ textarea {
   align-content: center; }
 
 iframe {
-  width: 80%;
-  height: 400px; }
+  width: 100%;
+  height: 650px; }
 
 /*
 article {
