--- a/scss/_miEstilo.scss
+++ b/scss/_miEstilo.scss
@@ -136,7 +136,7 @@ nav ul li a:hover {
 .container {
   background: #FFFFFF;
   width: 100%;
-  height: 750px;
+  height: 780px;
   position: relative;
 }
 
@@ -150,6 +150,7 @@ nav ul li a:hover {
   width: 50%;
   float: left;
   margin: 2%;
+  margin-top: 0%;
 }
 
 .container .contact-form .title {
@@ -322,8 +323,8 @@ textarea {
 }
 
 iframe {
-  width: 80%;
-  height: 400px;
+  width: 100%;
+  height: 650px;
 }
 
 /*
