--- a/scss/_miEstilo.scss
+++ b/scss/_miEstilo.scss
@@ -84,6 +84,11 @@ section {
   text-align: center;
 }
 
+.section__video--tamanio{
+    height: 400px;
+    width: 80%;
+}
+
 table {
   margin-top: 1rem;
   margin-left: 2rem;
