--- a/views/blog.html
+++ b/views/blog.html
@@ -54,12 +54,11 @@
             </h5>
             <p>Este video contiene informacion relevante para el proceso de obtencion de la ciudadania croata</p>
 
-            <iframe width="auto" height="auto" src="https://www.youtube.com/embed/jDvcoE-T0nI"
+            <iframe class="section__video--tamanio" width="auto" height="auto" src="https://www.youtube.com/embed/jDvcoE-T0nI"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
-    </section>
         <div class="row">
             <article class="col-md noticia">
                 <h3 class="noticia__titulo--tamanio noticia__titulo--color">Facilitan la obtención de la ciudadanía
@@ -148,6 +147,7 @@
                 </p>
             </article>
         </div>
+    </section>
     <footer class="container-fluid fixed-bottom">
         <div class="float-left footer--padding">
             © Diseñado y Desarrollado | Sebastian Cerda
