--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Informacion sobre Sebastian Cerda, creador de la paguina web">
     <meta name="keywords" content="Croacia, Croata, partida de nacimiento, turno embajada, ciudadania europea">
     <title>Mi proyecto-Nosotros</title>
+    <link rel="stylesheet" href="https://raw.github.com/daneden/animate.css/master/animate.css">
     <link rel="stylesheet" href="../../Coder/css/estilo.css">
 </head>
 <!--Inicio de Body-->
@@ -51,7 +52,7 @@
     </nav>
     <section>
         <!--incio de article-->
-        <article>
+        <article class="wow animate__jackInTheBox">
             <!--incio de contenedor para presentacion-->
             <div class="autor">
                 <!--imagen del autor-->
@@ -102,6 +103,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
     </script>
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+
 </body>
 
 </html>
