--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -13,8 +13,7 @@
 @mixin make-row($gutter: $grid-gutter-width) {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -$gutter / 2;
-  margin-left: -$gutter / 2;
+  margin:2%
 }
 
 // For each breakpoint, define the maximum width of the container in a media query
