--- a/views/contacto.html
+++ b/views/contacto.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="Croacia, Croata, partida de nacimiento, turno embajada, ciudadania europea">
     <title>Mi proyecto-Contacto</title>
     <link rel="stylesheet" href="../../Coder/css/estilo.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 </head>
 
 <body>
@@ -68,6 +70,11 @@
         </div>
     </section>
     <footer class="container-fluid fixed-bottom">
+        .bubbles
+        - for (var i = 0; i < 128; i++) //Small numbers looks nice too
+            .bubble(
+                style=`--size:${2 + Math.random() * 4}rem; --distance:${6 + Math.random() * 4}rem; --position:${-5 + Math.random() * 110}%; --time:${2 + Math.random() * 2}s; --delay:${-1 * (2 + Math.random() * 2)}s;`
+            )
         <div class="float-left footer--padding">
             © Diseñado y Desarrollado | Sebastian Cerda
         </div>
