--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -50,32 +50,63 @@
             </ul>
         </div>
     </nav>
-    <section>
-        <!--incio de article-->
-        <article class="wow animate__jackInTheBox">
-            <!--incio de contenedor para presentacion-->
-            <div class="autor">
-                <!--imagen del autor-->
-                <img class="foto-autor rounded mx-auto d-block" src="../../Coder/assets/seba.jpg" alt="Sebastian Cerda"
-                    width="150" height="150">
-                <!--contenedor descripcion del autor-->
-                <div class="descripcion-autor">
-                    <!--titulo con nombre-->
-                    <h3>Sebastian Cerda</h3>
-                    <!--descripcion-->
-                    <p>Sebastian es analista de sistemas y aspirante a ciudadano croata. Trabaja en Chevron y es un
-                        apasionado de los deportes, especialmente el voley. Su lema preferido es: "A veces se gana,
-                        otras se aprende!".</p>
-                    <!--link a perfil en linkedin-->
-                    <a href="https://www.linkedin.com/in/sebasti%C3%A1n-cerda-319b9642/" target="_blank">Ver su perfil
-                        de LinkedIn</a>
-                    <!--fin contenedor para descripcion-->
+    <section class="section about-section gray-bg" id="about">
+        <div class="container">
+            <div class="row align-items-center flex-row-reverse">
+                <div class="col-lg-6">
+                    <div class="about-text go-to">
+                        <h3 class="dark-color">Sobre mi</h3>
+                        <h6 class="theme-color lead">Sebastian Cerda</h6>
+                        <p>Sebastian es analista de sistemas y aspirante a ciudadano croata. Trabaja en Chevron y es un
+                            apasionado de los deportes, especialmente el voley. Su lema preferido es: "A veces se gana,
+                            otras se aprende!</p>
+                        <div class="row about-list">
+                            <div class="col-md-6">
+                                <div class="media">
+                                    <label>Fecha de Nacimiento</label>
+                                    <p>17 Noviembre 1989</p>
+                                </div>
+                                <div class="media">
+                                    <label>Edad</label>
+                                    <p>31 años</p>
+                                </div>
+                                <div class="media">
+                                    <label>Nacionalidad</label>
+                                    <p>Argentino</p>
+                                </div>
+                                <div class="media">
+                                    <label>Domicilio</label>
+                                    <p>Capital Federal</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="media">
+                                    <label>E-mail</label>
+                                    <p>scerdalipanovich@gmail.com</p>
+                                </div>
+                                <div class="media">
+                                    <label>Telefono</label>
+                                    <p>+54 9 11 44107014</p>
+                                </div>
+                                <div class="media">
+                                    <label>Skype</label>
+                                    <p>sebycerda</p>
+                                </div>
+                                <div class="media">
+                                    <label>Freelance</label>
+                                    <p>Disponible</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <!--fin contenedor para presentacion-->
+                <div class="col-lg-6">
+                    <div class="about-avatar">
+                        <img class="foto-autor rounded mx-auto d-block" src="../../Coder/assets/seba.jpg" alt="Sebastian Cerda">
+                    </div>
+                </div>
             </div>
-            <!--fin de article-->
-        </article>
-        <!--fin de section-->
+        </div>
     </section>
     <!--incio de footer-->
     <footer class="container-fluid fixed-bottom">
