--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7467,6 +7467,24 @@ nav ul li a:hover {
   margin: 2% 8%;
   border: none; }
 
+body {
+  color: #6F8BA4;
+  margin-top: 20px; }
+
+.section {
+  padding: 100px 0;
+  position: relative; }
+
+.gray-bg {
+  background-color: #f5f5f5; }
+
+img {
+  max-width: 100%; }
+
+img {
+  vertical-align: middle;
+  border-style: none; }
+
 /* About Me 
 ---------------------*/
 .about-text h3 {
@@ -7531,9 +7549,6 @@ nav ul li a:hover {
 @media (max-width: 991px) {
   .about-avatar {
     margin-top: 30px; } }
-
-.theme-color {
-  color: #343a40; }
 
 .dark-color {
   color: #343a40; }
