--- a/scss/_miEstilo.scss
+++ b/scss/_miEstilo.scss
@@ -196,82 +196,98 @@ nav ul li a:hover {
   border: none;
 }
 
+body{
+  color: #6F8BA4;
+  margin-top:20px;
+}
+.section {
+  padding: 100px 0;
+  position: relative;
+}
+.gray-bg {
+  background-color: #f5f5f5;
+}
+img {
+  max-width: 100%;
+}
+img {
+  vertical-align: middle;
+  border-style: none;
+}
 /* About Me 
 ---------------------*/
 .about-text h3 {
-  font-size: 45px;
-  font-weight: 700;
-  margin: 0 0 6px;
+font-size: 45px;
+font-weight: 700;
+margin: 0 0 6px;
 }
 @media (max-width: 767px) {
-  .about-text h3 {
-    font-size: 35px;
-  }
+.about-text h3 {
+  font-size: 35px;
+}
 }
 .about-text h6 {
-  font-weight: 600;
-  margin-bottom: 15px;
+font-weight: 600;
+margin-bottom: 15px;
 }
 @media (max-width: 767px) {
-  .about-text h6 {
-    font-size: 18px;
-  }
+.about-text h6 {
+  font-size: 18px;
+}
 }
 .about-text p {
-  font-size: 18px;
-  max-width: 450px;
+font-size: 18px;
+max-width: 450px;
 }
 .about-text p mark {
-  font-weight: 600;
-  color: #343a40;
+font-weight: 600;
+color: #343a40;
 }
 
 .about-list {
-  padding-top: 10px;
+padding-top: 10px;
 }
 .about-list .media {
-  padding: 5px 0;
+padding: 5px 0;
 }
 .about-list label {
-  color: #343a40;
-  font-weight: 600;
-  width: 88px;
-  margin: 0;
-  position: relative;
+color: #343a40;
+font-weight: 600;
+width: 88px;
+margin: 0;
+position: relative;
 }
 .about-list label:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 11px;
-  width: 1px;
-  height: 12px;
-  background: #343a40;
-  -moz-transform: rotate(15deg);
-  -o-transform: rotate(15deg);
-  -ms-transform: rotate(15deg);
-  -webkit-transform: rotate(15deg);
-  transform: rotate(15deg);
-  margin: auto;
-  opacity: 0.5;
+content: "";
+position: absolute;
+top: 0;
+bottom: 0;
+right: 11px;
+width: 1px;
+height: 12px;
+background: #343a40;
+-moz-transform: rotate(15deg);
+-o-transform: rotate(15deg);
+-ms-transform: rotate(15deg);
+-webkit-transform: rotate(15deg);
+transform: rotate(15deg);
+margin: auto;
+opacity: 0.5;
 }
 .about-list p {
-  margin: 0;
-  font-size: 15px;
+margin: 0;
+font-size: 15px;
 }
 
 @media (max-width: 991px) {
-  .about-avatar {
-    margin-top: 30px;
-  }
+.about-avatar {
+  margin-top: 30px;
+}
 }
 
-.theme-color {
-    color: #343a40;
-}
+
 .dark-color {
-    color: #343a40;
+  color: #343a40;
 }
 
 /* reseting
