--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -50,43 +50,43 @@
             </ul>
         </div>
     </nav>
-    <section class="section about-section gray-bg" id="about">
+    <section class="about-section" id="about">
         <div class="container">
             <div class="row align-items-center flex-row-reverse">
                 <div class="col-lg-6">
                     <div class="about-text go-to">
                         <h3 class="dark-color">Sobre mi</h3>
-                        <h6 class="theme-color lead">Sebastian Cerda</h6>
-                        <p>Sebastian es analista de sistemas y aspirante a ciudadano croata. Trabaja en Chevron y es un
-                            apasionado de los deportes, especialmente el voley. Su lema preferido es: "A veces se gana,
+                        <h6 class="dark-color lead">Sebastian Cerda</h6>
+                        <p>Soy analista de sistemas y aspirante a ciudadano croata. Trabajo en Chevron y soy un
+                            apasionado de los deportes, especialmente el voley. Mi lema preferido es: "A veces se gana,
                             otras se aprende!</p>
                         <div class="row about-list">
                             <div class="col-md-6">
                                 <div class="media">
-                                    <label>Fecha de Nacimiento</label>
-                                    <p>17 Noviembre 1989</p>
+                                    <label>Nacimiento</label>
+                                    <p>17/11/1989</p>
                                 </div>
                                 <div class="media">
                                     <label>Edad</label>
                                     <p>31 años</p>
                                 </div>
                                 <div class="media">
-                                    <label>Nacionalidad</label>
-                                    <p>Argentino</p>
+                                    <label>Pais</label>
+                                    <p>Argentina</p>
                                 </div>
                                 <div class="media">
-                                    <label>Domicilio</label>
+                                    <label>Ciudad</label>
                                     <p>Capital Federal</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="media">
-                                    <label>E-mail</label>
+                                    <label>email</label>
                                     <p>scerdalipanovich@gmail.com</p>
                                 </div>
                                 <div class="media">
-                                    <label>Telefono</label>
-                                    <p>+54 9 11 44107014</p>
+                                    <label>Celular</label>
+                                    <p>+5491144107014</p>
                                 </div>
                                 <div class="media">
                                     <label>Skype</label>
