--- a/scss/_miEstilo.scss
+++ b/scss/_miEstilo.scss
@@ -42,7 +42,7 @@ footer {
 
 section {
   padding-top: 5rem;
-  padding-bottom: 3rem;
+  padding-bottom: 6rem;
 }
 
 .footer__social-icons--size {
@@ -197,7 +197,7 @@ nav ul li a:hover {
 }
 
 body{
-  color: #6F8BA4;
+  color: black;
   margin-top:20px;
 }
 .section {
