--- a/views/blog.html
+++ b/views/blog.html
@@ -49,10 +49,10 @@
     </nav>
     <section class="container-fluid">
         <div class="section__videoFrame--centrado">
-            <h5>
+            <h3 class="noticia__titulo--tamanio noticia__titulo--color">
                 Dra.Adriana Smajic
-            </h5>
-            <p>Este video contiene informacion relevante para el proceso de obtencion de la ciudadania croata</p>
+            </h3>
+            <p class="noticia__texto--tamanio noticia__texto--color">Este video contiene informacion relevante para el proceso de obtencion de la ciudadania croata</p>
 
             <iframe class="section__video--tamanio" width="auto" height="auto" src="https://www.youtube.com/embed/jDvcoE-T0nI"
                 title="YouTube video player" frameborder="0"
