--- a/views/blog.html
+++ b/views/blog.html
@@ -52,15 +52,16 @@
             <h3 class="noticia__titulo--tamanio noticia__titulo--color">
                 Dra.Adriana Smajic
             </h3>
-            <p class="noticia__texto--tamanio noticia__texto--color">Este video contiene informacion relevante para el proceso de obtencion de la ciudadania croata</p>
+            <p class="noticia__texto--tamanio noticia__texto--color">Este video contiene informacion relevante para el
+                proceso de obtencion de la ciudadania croata</p>
 
-            <iframe class="section__video--tamanio" width="auto" height="auto" src="https://www.youtube.com/embed/jDvcoE-T0nI"
-                title="YouTube video player" frameborder="0"
+            <iframe class="section__video--tamanio" width="auto" height="auto"
+                src="https://www.youtube.com/embed/jDvcoE-T0nI" title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+                allowfullscreen=""></iframe>
         </div>
         <div class="row">
-            <article class="col-md noticia">
+            <article class="col-md">
                 <h3 class="noticia__titulo--tamanio noticia__titulo--color">Facilitan la obtención de la ciudadanía
                     croata
                 </h3>
@@ -77,6 +78,11 @@
                     aspecto que dificultaba en gran medida la obtención de la ciudadanía ya que los solicitantes estaban
                     obligados a conocer el idioma, la estructura social y la cultura del país.</p>
             </article>
+
+        </div>
+
+        <div class="row">
+
             <article class="col-md">
                 <h3 class="noticia__titulo--tamanio noticia__titulo--color">¿Por qué obtener la ciudadanía de este país?
                 </h3>
