--- a/views/servicios.html
+++ b/views/servicios.html
@@ -41,6 +41,7 @@
                         <a class="dropdown-item" href="../../Coder/views/servicios.html#croataTable">Obtener Turno</a>
                         <a class="dropdown-item" href="../../Coder/views/servicios.html#nacimientoTable">Buscar
                             Partidas</a>
+                        <a class="dropdown-item" href="../../Coder/views/servicios.html#traduccionesTable">Traducciones</a>
                     </div>
                 </li>
             </ul>
@@ -50,7 +51,7 @@
         <article class="row">
             <div class="col-md row__col--itemscentrados">
                 <table id="croataTable" border="1">
-                    <tr>
+                    <tbody><tr>
                         <th>Servicio</th>
                         <td>Obtencion de turno</td>
                     </tr>
@@ -70,11 +71,33 @@
                             </ol>
                         </td>
                     </tr>
-                </table>
+                </tbody></table>
             </div>
-            <div class="col-md">
-                <table id="nacimientoTable" border="1">
+            <div class="col-md row__col--itemscentrados">
+                <table id="traduccionesTable" border="1">
+                    <tbody><tr>
+                        <th>Servicio</th>
+                        <td>Traducciones</td>
+                    </tr>
                     <tr>
+                        <th>Precio</th>
+                        <td>1000 ARS/hoja</td>
+                    </tr>
+                    <tr>
+                        <th>Documentos a traducir</th>
+                        <td>
+                            <ol>
+                                <li>Hoja de vida</li>
+                                <li>Certificado de nacimiento</li>
+                                <li>Certificado de casamiento</li>
+                                <li>Certificado de antecedentes penales</li>
+                            </ol>
+                        </td>
+                    </tr>
+                </tbody></table>
+            </div><div class="col-md row__col--itemscentrados">
+                <table id="nacimientoTable" border="1">
+                    <tbody><tr>
                         <th>Servicio</th>
                         <td>Buscar de Partida</td>
                     </tr>
@@ -94,7 +117,7 @@
                             </ol>
                         </td>
                     </tr>
-                </table>
+                </tbody></table>
             </div>
         </article>
     </section>
