--- a/views/contacto.html
+++ b/views/contacto.html
@@ -41,10 +41,10 @@
                         Servicios
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item dark" href="../../Coder/views/servicios.html#croataTable">Obtener
-                            Turno</a>
+                        <a class="dropdown-item" href="../../Coder/views/servicios.html#croataTable">Obtener Turno</a>
                         <a class="dropdown-item" href="../../Coder/views/servicios.html#nacimientoTable">Buscar
                             Partidas</a>
+                        <a class="dropdown-item" href="../../Coder/views/servicios.html#traduccionesTable">Traducciones</a>
                     </div>
                 </li>
             </ul>
