--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -45,6 +45,7 @@
                         <a class="dropdown-item" href="../../Coder/views/servicios.html#croataTable">Obtener Turno</a>
                         <a class="dropdown-item" href="../../Coder/views/servicios.html#nacimientoTable">Buscar
                             Partidas</a>
+                        <a class="dropdown-item" href="../../Coder/views/servicios.html#traduccionesTable">Traducciones</a>
                     </div>
                 </li>
             </ul>
