listo para entregar

--- a/views/contacto.html
+++ b/views/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Formulario de contacto o consulta sobre servicios">
     <meta name="keywords" content="Croacia, Croata, partida de nacimiento, turno embajada, ciudadania europea">
-    <title>Mi proyecto-Contacto</title>
+    <title>Herencia Croata-Contacto</title>
     <link rel="stylesheet" href="../../Coder/css/estilo.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
