--- a/views/blog.html
+++ b/views/blog.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blog con informacion relacionados a la obtencion de la ciudadania Croata">
     <meta name="keywords" content="Croacia, Croata, partida de nacimiento, turno embajada, ciudadania europea">
-    <title>Mi proyecto-Blog</title>
+    <title>Herencia Croata-Blog</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../../Coder/css/estilo.css">
 </head>
 
@@ -62,7 +63,7 @@
                 allowfullscreen=""></iframe>
         </div>
         <div class="row">
-            <article class="col-md">
+            <article class="col-md" data-aos="fade-up">
                 <h3 class="noticia__titulo--tamanio noticia__titulo--color">Facilitan la obtención de la ciudadanía
                     croata
                 </h3>
@@ -84,7 +85,7 @@
 
         <div class="row">
 
-            <article class="col-md">
+            <article class="col-md" data-aos="fade-up">
                 <h3 class="noticia__titulo--tamanio noticia__titulo--color">¿Por qué obtener la ciudadanía de este país?
                 </h3>
                 <p class="noticia__texto--tamanio noticia__texto--color"> Si bien este país balcánico ha atravesado
@@ -113,7 +114,7 @@
                     gran destino para vivir o visitar cuando quieras.
                 </p>
             </article>
-            <article class="col-md">
+            <article class="col-md" data-aos="fade-up">
                 <h3 class="noticia__titulo--tamanio noticia__titulo--color">Cómo sacar la ciudadanía croata en Argentina
                 </h3>
                 <p class="noticia__texto--tamanio noticia__texto--color">Si eres descendiente de un ciudadano croata y
@@ -179,6 +180,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
     </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 
 </html>
