--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Informacion sobre Sebastian Cerda, creador de la paguina web">
     <meta name="keywords" content="Croacia, Croata, partida de nacimiento, turno embajada, ciudadania europea">
-    <title>Mi proyecto-Nosotros</title>
+    <title>Herencia Croata-Nosotros</title>
     <link rel="stylesheet" href="https://raw.github.com/daneden/animate.css/master/animate.css">
     <link rel="stylesheet" href="../../Coder/css/estilo.css">
 </head>
